--- a/0acf6ecc2b0e48a6baf7d87f67c47330.opf/meta.yml
+++ b/0acf6ecc2b0e48a6baf7d87f67c47330.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     a57f6d11b75a43fa913aed8292cb4443:
       base_file: v026.txt
       image_group_id: I1PD95871
-      title: ''
+      title: བྱང་ཆུབ་སྤྱོད་པའི་སྒྲོན་མ།
       total_pages: 1902
       volume_number: 26
